@startuml

hide empty members


struct Consensus {}

class ValidatorSet {
    +finalizedValidators
    +topStakes
    +queueStakes

    +getStake(nodeAddress)
    #addStake(nodeAddress, amount)
    #removeStake(nodeAddress, amount)
    -finalizeChange()
    -reward(beneficiaries[], kind[])
    -report(nodeAddress)
}


interface IValidatorSet {
    #addStake(nodeAddress, amount)
    #removeStake(nodeAddress, amount)
}
interface IStaking {
    #reward(nodeAddress, amount)
    #report(nodeAddress)

}





class AirdaoStaking {
    + **many users shares node**
    + **nodes always in top**
    - receives 80% reward
    + all rewards in AMB [???]
    - first reward after 15 days
    - 15 days unstaking period
}

class LiquidStaking {
    + **many users shares node**
    + **nodes always in top**
    - receives 60% reward
    + all rewards in AMB [???]
    + no delays, no unstaking period
    - whitelist [???]
}

class BaseNodes {
    + **multisig can register nodes**
    + **nodes always in top**
    + receives 100% reward
    + all rewards in AMB
    + no limits
}

class ServerNodes {
    + **one user = one node**
    - **can be slashed**
    + receives 100% reward
    - receive some reward in Amb Bonds
    - has minimum stake amount limit
    - 24 hours onboarding period
    - 14 days unstaking period
}


Consensus <.-> ValidatorSet


ValidatorSet --> IStaking
ValidatorSet <-- IValidatorSet

IStaking --> BaseNodes
IStaking --> ServerNodes
IStaking --> AirdaoStaking
IStaking --> LiquidStaking

IValidatorSet <-- BaseNodes
IValidatorSet <-- ServerNodes
IValidatorSet <-- AirdaoStaking
IValidatorSet <-- LiquidStaking

@enduml
